--- a/first.app.ws/src/main/resources/application.properties
+++ b/first.app.ws/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:8889/spring_db
 
 # JPA config :
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
