- JPQL queries pb

--- a/first.app.ws/src/main/resources/application.properties
+++ b/first.app.ws/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.datasource.url=jdbc:mysql://localhost:8889/spring_db
 
 # JPA config :
 spring.jpa.hibernate.ddl-auto=update
+
+
+# debuging SQL queries 
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# logging.level.org.hibernate.format_sql=true
+
+# configure port 
+server.port=8080
